test/deca/context/valid/3_31_print_int_d.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche 12

{

    print(12);

}