test/deca/context/invalid/3_31_print_null.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Ligne 8 : Print d'un type incompatible
//RESULT:
{
    print(null);
}